<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/scorekeepertri" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/inningText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:text=" "
                        android:textSize="35sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/inningText" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/teamImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/guestteam" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/baseImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/basesempty" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/outText" />

                    <TextView
                        android:id="@+id/outsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strikeText" />

                    <TextView
                        android:id="@+id/batterStrikeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ballsText" />

                    <TextView
                        android:id="@+id/pitcherBallText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:text="@string/homeTeamText" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:text="@string/guestTeamText" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <ImageView

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/teamlogoangels" />

                    <TextView
                        android:id="@+id/homeScoreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/inningTextTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text=" " />

                    <TextView
                        android:id="@+id/guestScoreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textSize="35sp" />

                    <ImageView

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/guestteam" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:onClick="addStrike"
                        android:background="@drawable/my_button"
                        android:text="@string/addStrikeText" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:onClick="addBall"
                        android:background="@drawable/my_button"
                        android:text="@string/addBallText" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:onClick="addOut"
                        android:background="@drawable/my_button"
                        android:text="@string/addOutText" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="addSingleRun"
                        android:background="@drawable/my_button"
                        android:layout_margin="5dp"
                        android:text="@string/addSingleText" />


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="addHomeRun"
                        android:background="@drawable/my_button"
                        android:layout_margin="5dp"
                        android:text="@string/addHomeRunText" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="startGame"
                        android:layout_margin="5dp"
                        android:background="@drawable/my_button"
                        android:text="@string/resetGameText" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>